[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
bindgen = "0.71.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs     = "2"
tauri-plugin-dialog = "2.0.3"
windows-sys = "0.59.0"
anyhow = "1.0.98"
byteorder = "1.5.0"
windows = { version = "0.61.1", features = ["Win32_NetworkManagement", "Win32_Networking", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_System_ProcessStatus"] }
libloading = "0.8.6"
bitflags = "1.3.2"
